2002-12-06  Jody Goldberg <jody@gnome.org>

	* src/regutf8.c (gnumeric_regcomp_XL) : moved from
	  plugins/fn-string/functions.c:search_pattern_to_regexp and turned into
	  a wrapper.

2002-12-05  Morten Welinder  <terra@diku.dk>

	* src/xml-io.c: Eliminate most char casts.

2002-12-05  Jody Goldberg <jody@gnome.org>

	* src/sheet-filter.c (cb_filter_button_release) : silence warning.
	(gnm_filter_set_condition) : ditto.

	* src/plugin-service.c : s/gnum_plugin/gnm_plugin/

	* src/Makefile.am (EXTRA_DIST) : add README.gnm_float

2002-12-05  Jody Goldberg <jody@gnome.org>

	* src/style-color.c (gnumeric_color_init) : swap green to yellow

	* src/gui-util.c (gnumeric_create_tooltip) : use gs_yellow.

	* src/tools/filter.c (filter_show_all) : clear filters.

	* src/sheet-filter.c (filter_field_apply) : #$^@# fix inversion of
	  'top' and 'bottom'
	(collect_unique_elements) : Store the value
	(gnm_filter_get_condition) : new.
	(cb_filter_find_percentage) : new.
	(cb_hide_unwanted_percentage) : new.
	(filter_field_apply) : implement top/bottom percentage filters.

2002-12-05  Morten Welinder  <terra@diku.dk>

	* src/workbook-control-gui.c: Attempt to reinstate pixmap for
	print preview in non-bonobo case.

2002-12-04  Jody Goldberg <jody@gnome.org>

	* src/workbook-control-gui.c (wbcg_menu_state_update) : link filter
	  state to 'show all' state.

	* src/value.c (value_cmp_reverse) : new.

	* src/xml-io.c (xml_write_sheet_filters) : new.
	(xml_sheet_write) : Used here.
	(xml_read_sheet_filters) : new.
	(xml_sheet_read) : Used here.

	* src/gui-util.c (gnumeric_option_menu_get_selected_index) : delete.

	* src/sheet-filter.c (cb_filter_find_minmax) : new.
	(cb_hide_the_rest) : new.
	(filter_field_apply) : support top/bottom N items.
	(cb_filter_button_release) : connect up the dialog stubs.

2002-11-18  Fernando Herrera <fherrera@onirica.com>

	* gnumeric.desktop.in: add X-GNOME-BUGZILLA stuff

2002-12-04  Jody Goldberg <jody@gnome.org>
